Make website somewhat presentable

--- a/index.html
+++ b/index.html
@@ -5,23 +5,36 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<header class="site-header">
+	    <a class="site-title" href="index.html">Devon Loehr</a>
+		</header>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/resume">Resume</a></li>
+        		<li><a href="index.html">Home</a></li>
+	        	<li><a href="projects.html">Projects</a></li>
+        		<li><a href="Resume.pdf">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>About me</h1>
-				<p>I'm currently a student at Swarthmore College, studying Computer Science and Mathematics.</a></p>
+				<div style="float:right;">
+					<img src="images/profile.jpg" alt="Me!" height=250px; style="width:250px;height:350px;" hspace=20px;>
+				</div>
+				<p>
+					I'm currently a student at 
+					<a href="http://www.swarthmore.edu/">Swarthmore College</a>, 
+					studying Computer Science and Mathematics. I'll be graduating in Summer 2018.
+					My primary interests are Algebra, Programming Languages and Fractals.
+				</p>
+				<br style="clear:both;"></br>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:devon.loehr@gmail.com">email</a></li>
-        		<li><a href="https://github.com/DKLoehr">github.com/DKLoehr</a></li>
+        		<li><a href="https://github.com/DKLoehr">github</a></li>
+				<li><a href="https://www.linkedin.com/in/devon-loehr">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
